--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "cucumber_framework_b7",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -18,5 +17,6 @@
   },
   "cypress-cucumber-preprocessor": {
     "stepDefinitions": "cypress/e2e/step-definitions/**/*.js"
-  }
+  },
+  "description": ""
 }
